--- a/Photovoir/Views/_ViewImports.cshtml
+++ b/Photovoir/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Photovoir
+@using Microsoft.AspNetCore.Identity
 @using Photovoir.Models
+@using Photovoir.Models.Account
+@using Photovoir.Models.Manage
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
